Se agrega favicon a todos los html,se linkea al index el logo del header, se crea y estiliza servicios.scss y ademas se corrige responsive del header

--- a/pages/acerca-nosotros.html
+++ b/pages/acerca-nosotros.html
@@ -22,6 +22,9 @@
         <div class="menu-mobile">
             <nav class="navbar navbar-expand-lg custom-color-nav">
                 <div class="container-fluid">
+                    <a href="../index.html">
+                        <img src="../images/logofega.png" alt="logo de la empresa" class="logo-mobile">
+                    </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -52,7 +55,9 @@
         </div>
         <!--  Termina Menu Mobile Boostrap / Comienza Header vista desktop-->
         <header>
-            <img src="../images/logofega.png" alt="logo-empresa" class="logo">
+            <a href="../index.html">
+                <img src="../images/logofega.png" alt="logo de la empresa" class="logo">
+            </a>
             <nav class="botom-nav">
                 <ul>
                     <li><a href="../index.html">¿Quienes Somos?</a></li>
@@ -75,18 +80,20 @@
             </div>
 
             <div class="vision-img">
-                <img src="../images/vision.jpg" alt="Ojo con un engranaje azul"> 
+                <img src="../images/vision.jpg" alt="Ojo con un engranaje azul">
             </div>
             <section class="mision color-fuente">
                 <h2>Mision</h2>
 
-                <p class="centrado">Nuestra misión es brindar valor a nuestros clientes a través de la prestación de servicios de
+                <p class="centrado">Nuestra misión es brindar valor a nuestros clientes a través de la prestación de
+                    servicios de
                     ingeniería,
                     suministros, construcción, operación y gerenciamiento de proyectos de infraestructura.</p>
             </section>
             <section class=" vision color-fuente">
                 <h2>Vision</h2>
-                <p class="centrado">Buscamos ser la empresa de ingeniería y construcción líder en lo que respecta a método de trabajo,
+                <p class="centrado">Buscamos ser la empresa de ingeniería y construcción líder en lo que respecta a
+                    método de trabajo,
                     patrimonio tecnológico y capacidades de sus recursos humanos.</p>
             </section>
             <section class="valores color-fuente">
