--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <meta name="description" content="Descubre nuestros servicios y materiales en Fega Proveedores. Ofrecemos una amplia gama de soluciones y materiales de alta calidad para satisfacer las necesidades de tu empresa. Desde piezas personalizadas hasta soluciones de ingeniería, nuestro equipo experimentado está listo para brindarte la mejor calidad y servicio. Explora nuestra variedad de servicios y materiales, y contáctanos para obtener más información.">
+    <meta name="description"
+        content="Descubre nuestros servicios y materiales en Fega Proveedores. Ofrecemos una amplia gama de soluciones y materiales de alta calidad para satisfacer las necesidades de tu empresa. Desde piezas personalizadas hasta soluciones de ingeniería, nuestro equipo experimentado está listo para brindarte la mejor calidad y servicio. Explora nuestra variedad de servicios y materiales, y contáctanos para obtener más información.">
     <title>Fega Proveedores - Servicios y Materiales</title>
     <link rel="icon" href="../images/logofega.ico" type="icon">
 </head>
@@ -19,6 +23,9 @@
         <div class="menu-mobile">
             <nav class="navbar navbar-expand-lg custom-color-nav">
                 <div class="container-fluid">
+                    <a href="../index.html">
+                        <img src="../images/logofega.png" alt="logo de la empresa" class="logo-mobile">
+                    </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -50,7 +57,9 @@
         <!--Termina Menu Mobile Boostrap / Comienza Header vista desktop-->
 
         <header>
-            <img src="../images/logofega.png" alt="logo-empresa" class="logo">
+            <a href="../index.html">
+                <img src="../images/logofega.png" alt="logo de la empresa" class="logo">
+            </a>
             <nav class="botom-nav">
                 <ul>
                     <li><a href="../index.html">¿Quienes Somos?</a></li>
@@ -65,13 +74,41 @@
 
         <!--COMIENZA MAIN-->
         <main>
-            <h1>Servicios y Materiales:</h1>
-            <section class="trabajos-realizados">
-                <div class="card-trabajos"><img
-                        src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
+            <div class="titulo-servicios">
+                <h1>Servicios y Materiales:</h1>
+            </div>
+            <section class="servicios">
+                <div class="img-wrap">
+                    <img src="../images/plastic.jpg" alt="Piezas plasticas mecanizadas">
+                    <div class="text-overlay color-fuente">
+                        <p>Diseño y fabricación de componentes personalizados: <br> Brindamos servicios de diseño y
+                            fabricación
+                            de componentes de plástico de ingeniería según los requerimientos y especificaciones
+                            precisas de
+                            nuestros clientes. Nuestro equipo de ingenieros expertos trabaja en estrecha colaboración
+                            con
+                            los clientes para comprender sus necesidades y convertir sus ideas en productos reales.
+                            Utilizamos materiales plásticos de alta calidad y tecnologías avanzadas para crear
+                            soluciones a
+                            medida que cumplen con los más altos estándares de calidad y rendimiento.</p>
+                    </div>
                 </div>
-                <div class="card-trabajos"><img
-                        src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
+                <div class="img-wrap">
+                    <img src="../images/nylon.jpg" alt="Piezas plasticas de nylon de diversos colores">
+                    <div class="text-overlay color-fuente">
+                        <p>Prototipado rápido y desarrollo de productos: <br> Ofrecemos servicios de prototipado rápido
+                            y
+                            desarrollo de productos para ayudar a las empresas a llevar sus conceptos y diseños de
+                            productos
+                            al mercado de manera ágil y eficiente. Nuestro equipo cuenta con la experiencia necesaria
+                            para
+                            convertir las ideas en prototipos funcionales utilizando plásticos de ingeniería.Este
+                            servicio
+                            permite a nuestros clientes probar y validar sus diseños, realizar modificaciones según sea
+                            necesario y acelerar el proceso de desarrollo de productos antes de la producción en masa.
+                            Brindamos soluciones rápidas y confiables para que las empresas puedan reducir el tiempo de
+                            lanzamiento al mercado y obtener una ventaja competitiva.</p>
+                    </div>
                 </div>
         </main>
         <!--Termina el main-->
