--- a/pages/trabajos-realizados.html
+++ b/pages/trabajos-realizados.html
@@ -20,6 +20,9 @@
         <div class="menu-mobile">
             <nav class="navbar navbar-expand-lg custom-color-nav">
                 <div class="container-fluid">
+                    <a href="../index.html">
+                        <img src="../images/logofega.png" alt="logo de la empresa" class="logo-mobile">
+                    </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -51,7 +54,9 @@
         <!--Termina Menu Mobile Boostrap / Comienza Header vista desktop-->
 
         <header>
-            <img src="../images/logofega.png" alt="logo-empresa" class="logo">
+            <a href="../index.html">
+                <img src="../images/logofega.png" alt="logo de la empresa" class="logo">
+            </a>
             <nav class="botom-nav">
                 <ul>
                     <li><a href="../index.html">¿Quienes Somos?</a></li>
@@ -71,13 +76,14 @@
             </div>
             <section class="trabajos-realizados">
                 <div class="trabajos-realizados-col1">
-                    <div class="card-trabajos"><img src="../images/guia-cadena.jpg"
-                            alt="Guias de cadena en base a roflon">
+                    <div class="card-trabajos">
+                        <img src="../images/guia-cadena.jpg" alt="Guias de cadena en base a roflon">
                         <p>Los guías de desgaste complementan las cadenas transportadoras, bandas modulares y correas
                             dentadas para incrementar su rendimiento y reducir el mantenimiento de las cadenas de
                             rodillos, correas trapezoidales, y correas planas y redondas.</p>
                     </div>
-                    <div class="card-trabajos"><img src="../images/sello-teflon-corrugado.png" alt="sello de teflon corrugado blanco">
+                    <div class="card-trabajos">
+                        <img src="../images/sello-teflon-corrugado.png" alt="sello de teflon corrugado blanco">
                         <p>Sellos de Teflon para Maquina de corrugado
                         </p>
                     </div>
