--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="./images/logofega.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        <meta name="description" content="Fega Proveedores es una empresa joven conformada por personas con amplia experiencia en proveer soluciones específicas y óptimas para las necesidades de tu empresa. Ofrecemos soluciones de plásticos de ingeniería de alta calidad para aplicaciones alimentarias con bajo desgaste. Explora nuestros servicios, consulta nuestros trabajos realizados y contáctanos para obtener más información.">
-
+    <meta name="description"
+        content="Fega Proveedores es una empresa joven conformada por personas con amplia experiencia en proveer soluciones específicas y óptimas para las necesidades de tu empresa. Ofrecemos soluciones de plásticos de ingeniería de alta calidad para aplicaciones alimentarias con bajo desgaste. Explora nuestros servicios, consulta nuestros trabajos realizados y contáctanos para obtener más información.">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Fega Proveedores - Proveedores de soluciones plasticos tipo ingenieria</title>
 </head>
@@ -22,6 +23,7 @@
         <div class="menu-mobile">
             <nav class="navbar navbar-expand-lg custom-color-nav">
                 <div class="container-fluid">
+                    <img src="./images/logofega.png" alt="logo de la empresa" class="logo-mobile">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -53,7 +55,7 @@
         <!--  Termina Menu Mobile Boostrap / Comienza Header vista desktop-->
 
         <header>
-            <img src="./images/logofega.png" alt="logo-empresa" class="logo">
+            <img src="./images/logofega.png" alt="logo de la empresa" class="logo">
             <nav class="botom-nav">
                 <ul>
                     <li><a href="./index.html">¿Quienes Somos?</a></li>
@@ -87,8 +89,8 @@
                     <img src="./images/roflon-p.webp" alt="Pieza hecha en base a roflon-p">
                     <img src="./images/rolo-rodillo-2.webp" alt="Pieza mecanizada con forma de Rodillo o Rolo">
                 </div>
-                <label for="boton-ver">Ver mas trabajos realizados:</label>
-                <a class="btn btn-dark" href="./pages/trabajos-realizados.html" id="boton-ver">Ver mas</a>
+                <a class="btn btn-primary custom-color-btn" href="./pages/trabajos-realizados.html" id="boton-ver">Ver mas
+                    trabajos</a>
             </section>
             <section class="caja-fotos-principales ">
                 <h2>
@@ -96,10 +98,10 @@
                 </h2>
                 <p>Estas son algunas de las empresas que día a día confían en nuestro compromiso:</p>
                 <div class="container-img container-clientes">
-                <img src="./images/emova-logo.jpg" alt="Logo de la empresa Emova">
-                <img src="./images/ceramica-san-lorenzo_logo.jpg" alt="Logo de la empresa ceramicas san lorenzo">
-                <img src="./images/aceros-angeletti.jpg" alt="Logo de la empresa Aceros Angeletti">
-            </div>
+                    <img src="./images/emova-logo.jpg" alt="Logo de la empresa Emova">
+                    <img src="./images/ceramica-san-lorenzo_logo.jpg" alt="Logo de la empresa ceramicas san lorenzo">
+                    <img src="./images/aceros-angeletti.jpg" alt="Logo de la empresa Aceros Angeletti">
+                </div>
             </section>
         </main>
         <!--Termina el main-->
