--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <meta name="description" content="¿Tienes alguna pregunta o consulta? ¡Contáctanos! En Fega Proveedores estamos aquí para ayudarte. Completa el formulario de contacto con tu nombre, apellido, correo electrónico, teléfono y cualquier información adicional que desees compartir. Estaremos encantados de responder a tus preguntas y brindarte la información que necesitas. ¡Esperamos escucharte pronto!">
+    <meta name="description"
+        content="¿Tienes alguna pregunta o consulta? ¡Contáctanos! En Fega Proveedores estamos aquí para ayudarte. Completa el formulario de contacto con tu nombre, apellido, correo electrónico, teléfono y cualquier información adicional que desees compartir. Estaremos encantados de responder a tus preguntas y brindarte la información que necesitas. ¡Esperamos escucharte pronto!">
     <title>Fega Proveedores - Contactanos</title>
     <link rel="icon" href="../images/logofega.ico" type="icon">
 </head>
@@ -19,6 +20,9 @@
         <div class="menu-mobile">
             <nav class="navbar navbar-expand-lg custom-color-nav">
                 <div class="container-fluid">
+                    <a href="../index.html">
+                        <img src="../images/logofega.png" alt="logo de la empresa" class="logo-mobile">
+                    </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -50,7 +54,9 @@
         <!--Termina Menu Mobile Boostrap / Comienza Header vista desktop-->
 
         <header>
-            <img src="../images/logofega.png" alt="logo-empresa" class="logo">
+            <a href="../index.html">
+                <img src="../images/logofega.png" alt="logo de la empresa" class="logo">
+            </a>
             <nav class="botom-nav">
                 <ul>
                     <li><a href="../index.html">¿Quienes Somos?</a></li>
@@ -69,7 +75,7 @@
                 <h1>Contactanos</h1>
             </div>
             <section class="formulario-contacto">
-                <div class="container">
+                <div class="container ">
                     <div class="row">
                         <div class="col-md-12">
                             <div class="well well-sm">
@@ -120,10 +126,11 @@
                                         </div>
 
                                         <div class="form-group">
-                                            <div class="col-md-12 text-center">
-                                                <button type="button" class="btn btn-primary  custom-color-btn">Enviar</button>
+                                            <div class="col-md-8 text-center">
+                                                <button type="button"
+                                                    class="btn btn-primary  custom-color-btn">Enviar</button>
                                             </div>
-                                        </div>  
+                                        </div>
                                     </fieldset>
                                 </form>
                             </div>
