Se crea nuevo componente con efecto de carga y se agrega en trabajos-realziados y en acerca-nosotros y en servicios

--- a/pages/acerca-nosotros.html
+++ b/pages/acerca-nosotros.html
@@ -75,12 +75,12 @@
             <div class="titulo-acerca-nosotros">
                 <h1>Acerca de nosotros</h1>
             </div>
-            <div class="mision-img">
-                <img src="../images/mision.jpg" alt="Logo con diana de dardos con uno dardo clavado">
+            <div class="mision-img lazy-load">
+                <img src="../images/mision.jpg" alt="Logo con diana de dardos con uno dardo clavado" >
             </div>
 
-            <div class="vision-img">
-                <img src="../images/vision.jpg" alt="Ojo con un engranaje azul">
+            <div class="vision-img lazy-load">
+                <img src="../images/vision.png" alt="Ojo con un engranaje azul">
             </div>
             <section class="mision color-fuente">
                 <h2>Mision</h2>
