--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -78,8 +78,8 @@
                 <h1>Servicios y Materiales:</h1>
             </div>
             <section class="servicios">
-                <div class="img-wrap">
-                    <img src="../images/plastic.jpg" alt="Piezas plasticas mecanizadas">
+                <div class="img-wrap lazy-load">
+                    <img src="../images/plastic.jpg" alt="Piezas plasticas mecanizadas" >
                     <div class="text-overlay color-fuente">
                         <p>Diseño y fabricación de componentes personalizados: <br> Brindamos servicios de diseño y
                             fabricación
@@ -93,7 +93,7 @@
                             medida que cumplen con los más altos estándares de calidad y rendimiento.</p>
                     </div>
                 </div>
-                <div class="img-wrap">
+                <div class="img-wrap lazy-load">
                     <img src="../images/nylon.jpg" alt="Piezas plasticas de nylon de diversos colores">
                     <div class="text-overlay color-fuente">
                         <p>Prototipado rápido y desarrollo de productos: <br> Ofrecemos servicios de prototipado rápido
