--- a/pages/trabajos-realizados.html
+++ b/pages/trabajos-realizados.html
@@ -76,27 +76,27 @@
             </div>
             <section class="trabajos-realizados">
                 <div class="trabajos-realizados-col1">
-                    <div class="card-trabajos">
-                        <img src="../images/guia-cadena.jpg" alt="Guias de cadena en base a roflon">
+                    <div class="card-trabajos lazy-load">
+                        <img src="../images/guia-cadena.jpg" alt="Guias de cadena en base a roflon"  loading="lazy">
                         <p>Los guías de desgaste complementan las cadenas transportadoras, bandas modulares y correas
                             dentadas para incrementar su rendimiento y reducir el mantenimiento de las cadenas de
                             rodillos, correas trapezoidales, y correas planas y redondas.</p>
                     </div>
-                    <div class="card-trabajos">
-                        <img src="../images/sello-teflon-corrugado.png" alt="sello de teflon corrugado blanco">
+                    <div class="card-trabajos lazy-load ">
+                        <img src="../images/sello-teflon-corrugado.png" alt="sello de teflon corrugado blanco"  loading="lazy">
                         <p>Sellos de Teflon para Maquina de corrugado
                         </p>
                     </div>
                 </div>
                 <div class="trabajos-realizados-col2">
-                    <div class="card-trabajos">
-                        <img src="../images/rolo-rodillo.webp" alt="Rodillo blanco hecho en Roflon-P">
+                    <div class="card-trabajos lazy-load">
+                        <img src="../images/rolo-rodillo.webp" alt="Rodillo blanco hecho en Roflon-P" loading="lazy">
                         <p>Este diseño es exclusivo y esta elaborado en ROFLON-P, de esta forma se evita el uso de cajas
                             de rodamientos, no necesitando ser engrasados y produciendo una menor fricción sobre la
                             cinta</p>
                     </div>
-                    <div class="card-trabajos">
-                        <img src="../images/teflon.webp" alt="Pieza plastica mecanizada con un calibre">
+                    <div class="card-trabajos lazy-load">
+                        <img src="../images/teflon.webp" alt="Pieza plastica mecanizada con un calibre"  loading="lazy">
                         <p>TEFLON - ROFLON - NYLON - DELRIN - Piezas mecanizadas
                         </p>
                     </div>
