se convierte en png la imagen mision

--- a/pages/acerca-nosotros.html
+++ b/pages/acerca-nosotros.html
@@ -76,7 +76,7 @@
                 <h1>Acerca de nosotros</h1>
             </div>
             <div class="mision-img lazy-load">
-                <img src="../images/mision.jpg" alt="Logo con diana de dardos con uno dardo clavado" >
+                <img src="../images/mision.png" alt="Logo con diana de dardos con uno dardo clavado" >
             </div>
 
             <div class="vision-img lazy-load">
